--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -3,6 +3,8 @@
 = csrf_meta_tag
 = javascript_include_tag "application"
 = stylesheet_link_tag "application"
+- if @path
+  %link{ rel: "canonical", href: challenge_url(@path.permalink) }
 %meta{ property: "og:title", content: "#{social_title}" } 
 %meta{ property: "og:description", content: "#{social_description}" } 
 %meta{ property: "og:image", content: "#{social_image}" }
