new user flow changes

--- a/app/views/pages/intro.html.haml
+++ b/app/views/pages/intro.html.haml
@@ -30,5 +30,5 @@
           %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Random+numbers/round_3_purple.png" }
           %h3.inttitle Grow
           %p.intdetails
-            Get better at your Challenges and build your Persona. Dominate the leaderboard while helping others improve. Create your own Challenges and become a master of MetaBright. <strong>Be who you want to be.</strong>
+            Use Challenges to <strong>guide your improvement</strong> and build out your Persona. Dominate the leaderboard and create your own Challenges to become a master of MetaBright.
     = link_to "Let's go!", start_path, style: "float: right; margin: 0 10px 10px 0;", class: "button button-actionable"
