--- a/app/views/mailer/contribution_unlocked.html.haml
+++ b/app/views/mailer/contribution_unlocked.html.haml
@@ -6,7 +6,7 @@
   After making solid progress in #{@challenge_name} Challenge, you've unlocked the ability to create your own questions and tasks. 
   The questions you create will be immediately accessible in the #{@challenge_name} Challenge by the MetaBright community.    
 %p{:style => "font-size:12px;"} 
-  To get started, click the blue "Create a Question" button in the modal.
+  To get started, click the red "Create a Question" button in the modal.
   = link_to "Try it out now.", @challenge_link
 %p{:style => "font-size:12px;"} 
   Thanks,
