more new user flow changes

--- a/app/views/sections/completed_cr.html.haml
+++ b/app/views/sections/completed_cr.html.haml
@@ -29,4 +29,4 @@
             %li
               %strong Track your growth:
               Use them to guide your development through a Challenge.
-    = link_to "Continue", challenge_path(@task.path.permalink, completed:true, type:0), class:"btn btn-info", style: "float:right; margin-right:12px;"
+    = link_to "Continue", challenge_path(@task.path.permalink, completed:true, type:0), class:"button button-actionable", style: "float:right; margin-right:12px;"
