ok last changes

--- a/app/views/sections/_launchpad.html.haml
+++ b/app/views/sections/_launchpad.html.haml
@@ -236,7 +236,7 @@
             %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon"}
             %p Use Tasks to verify the things you've done and guide you towards what to do next. 
           - if @achievement_tasks.empty?
-            %p No tasks available.
+            %p No Tasks available.
           - else
             %table
               - @achievement_tasks.each do |t|
