remove question takedown penalty notice

--- a/app/views/sections/_launchpad.html.haml
+++ b/app/views/sections/_launchpad.html.haml
@@ -42,9 +42,7 @@
                     %li Keep the tone informal but direct.
                     %li Make sure you check for spelling and grammar.
                     %li 
-                      You <strong>earn #{Task::CREATOR_AWARD_POINTS.to_s} points</strong> per published question, but will <strong>lose #{Task::CREATOR_PENALTY_POINTS} points</strong> if that question is reported and taken down.
-                      %span.arena_create_tt
-                        %a#points-tt1.mb-tooltip{href:"#", rel:"tooltip"}
+                      You <strong>earn #{Task::CREATOR_AWARD_POINTS.to_s} points</strong> per published question.
               %div.step2{ style: "display: none;" }
                 %fieldset{style: "display: inline-block; margin-right:28px; width:99%;"}
                   %legend{style:"margin-bottom:5px; "} Create an Arena question
@@ -128,9 +126,7 @@
                     %li Keep the tone informal but direct.
                     %li Make sure you check for spelling and grammar.
                     %li 
-                      You <strong>earn #{Task::CREATOR_AWARD_POINTS.to_s} points</strong> per published question, but will <strong>lose #{Task::CREATOR_PENALTY_POINTS} points</strong> if that question is reported and taken down.
-                      %span.cr_create_tt
-                        %a#points-tt2.mb-tooltip{href:"#", rel:"tooltip"}
+                      You <strong>earn #{Task::CREATOR_AWARD_POINTS.to_s} points</strong> per published question.
               %div.step2{ style: "display: none;" }
                 %fieldset{style: "display: inline-block; margin-right:28px; width:99%;"}
                   %legend{style:"margin-bottom:5px; "} Create a CR
@@ -203,9 +199,7 @@
                     %li Keep the tone informal but direct.
                     %li Make sure you check for spelling and grammar.
                     %li 
-                      You <strong>earn #{Task::CREATOR_AWARD_POINTS.to_s} points</strong> per published Task, but will <strong>lose #{Task::CREATOR_PENALTY_POINTS} points</strong> if it's reported and taken down.
-                      %span.task_create_tt
-                        %a#points-tt3.mb-tooltip{href:"#", rel:"tooltip"}
+                      You <strong>earn #{Task::CREATOR_AWARD_POINTS.to_s} points</strong> per published Task.
               %div.step2{ style: "display: none;" }
                 %fieldset{style: "display: inline-block; margin-right:28px; width:99%;"}
                   %legend{style:"margin-bottom:5px; "} Create a Task
