feedback box added to footer

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -9,7 +9,9 @@
     \/
     %a{:href => "https://metabright.uservoice.com/", :target => "_blank"} Feedback
     \/
-    = link_to "Terms of Service", tos_path 
+    = link_to "Terms of Service", tos_path
+%div.feedback_tab
+  %a Feedback 
     
 :javascript
   var uvOptions = {};
