--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -329,6 +329,8 @@ h1, h2, h3, h4, h5, h6, p, div, span, a { font-family: 'MuliRegular'; font-weigh
 .copyright{}
 .footerlinks{}
 .footerlinks a{text-decoration: none; color:#707070}
+.feedback_tab{ background-image: url(https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/feedback_bubble.png); padding:3px; border-top-width: 1px;border-right-width: 1px;border-left-width: 1px;border-style: solid solid none;border-top-color: rgb(255, 255, 255);border-right-color: rgb(255, 255, 255);border-left-color: rgb(255, 255, 255);border-top-left-radius: 4px;border-top-right-radius: 4px;border-bottom-right-radius: 0px;border-bottom-left-radius: 0px;-webkit-box-shadow: rgba(255, 255, 255, 0.247059) 1px 1px 1px inset, rgba(0, 0, 0, 0.498039) 0px 1px 2px;box-shadow: rgba(255, 255, 255, 0.247059) 1px 1px 1px inset, rgba(0, 0, 0, 0.498039) 0px 1px 2px;font-style: normal;font-variant: normal;font-weight: bold;font-size: 14px;line-height: 1em;font-family: Arial, sans-serif;position: fixed;right: 10px;bottom: 0px;z-index: 9999;background-color: rgb(64, 64, 64);margin-bottom: 0px;display: block;background-position: 0px 50%;background-repeat: no-repeat no-repeat;}
+.feedback_tab a{ background-color: transparent;display: block;padding: 6px 10px 2px 42px;text-decoration: none; color:white; cursor:pointer; font-size:15px; }
 
 /* About */
 .aboutcontainer{margin-top:85px; margin-bottom:10px; overflow:hidden; width:695px;margin-left:auto;margin-right:auto;border-radius:6px;border: 1px solid rgba(0, 0, 0, .1);background: rgba(255, 255, 255, .8); }
