--- a/app/views/pages/landing.html.haml
+++ b/app/views/pages/landing.html.haml
@@ -4,11 +4,16 @@
   #tagline span{ font-size:18px;}
   .container {width: 940px; margin-left: auto; margin-right: auto; zoom: 1; display:inline-block; padding:3px 0 0 142px;}
   .container h3{ left:68px; }
-  #landingbox{ margin-top: 130px; height:335px; width: 695px; margin-left: auto; margin-right: auto; background-color: whiteSmoke;border-radius: 6px;border: 1px solid rgba(0, 0, 0, .1);background: rgba(255, 255, 255, 0.8); }
-  div.footer { position: absolute; bottom: 0px; }
-  #landing_carousel_box { width: 695px; margin-left: auto; margin-right: auto; background-color: whiteSmoke;border-radius: 6px;border: 1px solid rgba(0, 0, 0, .1);background: rgba(255, 255, 255, 0.8); }
-  #landing_carousel
+  #landingbox{ margin-top: 108px; height:335px; width: 695px; margin-left: auto; margin-right: auto; background-color: whiteSmoke;border-radius: 6px;border: 1px solid rgba(0, 0, 0, .1);background: rgba(255, 255, 255, 0.8); }
+  .footer { position: absolute; bottom: -181px; background: rgba(255, 255, 255, 0.8); }
+  #landing_carousel_box { margin-top:70px; padding:12px; height:240px; width: 100%; margin-left: auto; margin-right: auto; background-color: whiteSmoke;border-top: 1px solid rgba(0, 0, 0, .1);background: rgba(255, 255, 255, 0.8); }
+  #landing_carousel{ margin-bottom:0; width:85%; margin-right:auto; margin-left:auto; }
+  .carousel .item {height:180px;  border-radius:6px; padding:0px 47px;}
   .carousel-indicators li {display: block;float: left;width: 10px;height: 10px;margin-left: 5px;text-indent: -999px;background-color: #ccc;background-color: rgba(255, 255, 255, 0.25);border-radius: 5px;}
+  .persona_landing{text-transform: uppercase; color: rgb(44, 170, 255);font-weight:bold; margin:0 15px;}
+  #landing_carousel_box > div {margin-top:12px; }
+  #landing_carousel_box > div > span { font-size:34px; }
+  .mosaic-block{margin: 10px 30px; width:200px; height:160px; }
   
 %div#landingbox
   %div#logospace{ style: "width:720px;margin-right:auto;margin-left:auto;position: relative;" }
@@ -26,35 +31,128 @@
         %img{ style: "height:30px;", src: "https://s3.amazonaws.com/moonlite-nsdub/static/icon+facebook.png" }
         %span.landingbuttontext Sign in with Facebook »
 %div#landing_carousel_box
-  %div
-    %h2 For the HACKER in all of us
+  %div{ style: "text-align:center;" }
+    %span For the
+    %span.persona_landing Hacker
+    %span in all of us.
   %div#landing_carousel.carousel.slide
-    %ol.carousel-indicators
-      %li{ "data-target" => "#landing_carousel", "data-slide-to" => "0", class:"active"}
-      %li{ "data-target" => "#landing_carousel", "data-slide-to" => "1",}
-      %li{ "data-target" => "#landing_carousel", "data-slide-to" => "2",}
-      %li{ "data-target" => "#landing_carousel", "data-slide-to" => "3",}
     %div.carousel-inner
       %div.active.item
-        %img{src:"http://www.placekitten.com/1000/1000"}
-        %div.carousel-caption
-          %h4 Label
-          %p lkajsdlkfj aslkdjf alksjf laksjfd kla sdjflkas dlfkjahsd ljfka lskdfhalksjdf halkjsdfh laksdf asjkf
+        %div.mosaic-block.bar2
+          %a.mosaic-overlay{:style => "height: 20px; bottom: 0px; display: inline; left: 0px;"}
+            .details
+              %h4{:style => "font: 300 12px 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height: 10%;"} Javascript
+              %h5 Coming Soon!
+          %div
+            %img.mosaic-backdrop{:alt => "Original", :height => "140", :src => "http://moonlite.s3.amazonaws.com/objs/71/original.png?1354912232", :style => "display:inline;", :width => "140"}/        
+        %div.mosaic-block.bar2
+          %a.mosaic-overlay{:style => "height: 20px; bottom: 0px; display: inline; left: 0px;"}
+            .details
+              %h4{:style => "font: 300 12px 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height: 10%;"} Javascript
+              %h5 Coming Soon!
+          %div
+            %img.mosaic-backdrop{:alt => "Original", :height => "140", :src => "http://moonlite.s3.amazonaws.com/objs/74/original.png?1354916814", :style => "display:inline;", :width => "140"}/        
+        %div.mosaic-block.bar2
+          %a.mosaic-overlay{:style => "height: 20px; bottom: 0px; display: inline; left: 0px;"}
+            .details
+              %h4{:style => "font: 300 12px 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height: 10%;"} Javascript
+              %h5 Coming Soon!
+          %div
+            %img.mosaic-backdrop{:alt => "Original", :height => "140", :src => "http://moonlite.s3.amazonaws.com/objs/115/original.png?1359821271", :style => "display:inline;", :width => "140"}/        
+        %div.mosaic-block.bar2
+          %a.mosaic-overlay{:style => "height: 20px; bottom: 0px; display: inline; left: 0px;"}
+            .details
+              %h4{:style => "font: 300 12px 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height: 10%;"} Javascript
+              %h5 Coming Soon!
+          %div
+            %img.mosaic-backdrop{:alt => "Original", :height => "140", :src => "http://moonlite.s3.amazonaws.com/objs/71/original.png?1354912232", :style => "display:inline;", :width => "140"}/        
       %div.item
-        %img{src:"http://www.placekitten.com/1000/1000"}
-        %div.carousel-caption
-          %h4 Label
-          %p lkajsdlkfj aslkdjf alksjf laksjfd kla sdjflkas dlfkjahsd ljfka lskdfhalksjdf halkjsdfh laksdf asjkf
+        %div.mosaic-block.bar2
+          %a.mosaic-overlay{:style => "height: 20px; bottom: 0px; display: inline; left: 0px;"}
+            .details
+              %h4{:style => "font: 300 12px 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height: 10%;"} Javascript
+              %h5 Coming Soon!
+          %div
+            %img.mosaic-backdrop{:alt => "Original", :height => "140", :src => "http://moonlite.s3.amazonaws.com/objs/71/original.png?1354912232", :style => "display:inline;", :width => "140"}/        
+        %div.mosaic-block.bar2
+          %a.mosaic-overlay{:style => "height: 20px; bottom: 0px; display: inline; left: 0px;"}
+            .details
+              %h4{:style => "font: 300 12px 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height: 10%;"} Javascript
+              %h5 Coming Soon!
+          %div
+            %img.mosaic-backdrop{:alt => "Original", :height => "140", :src => "http://moonlite.s3.amazonaws.com/objs/74/original.png?1354916814", :style => "display:inline;", :width => "140"}/        
+        %div.mosaic-block.bar2
+          %a.mosaic-overlay{:style => "height: 20px; bottom: 0px; display: inline; left: 0px;"}
+            .details
+              %h4{:style => "font: 300 12px 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height: 10%;"} Javascript
+              %h5 Coming Soon!
+          %div
+            %img.mosaic-backdrop{:alt => "Original", :height => "140", :src => "http://moonlite.s3.amazonaws.com/objs/115/original.png?1359821271", :style => "display:inline;", :width => "140"}/        
+        %div.mosaic-block.bar2
+          %a.mosaic-overlay{:style => "height: 20px; bottom: 0px; display: inline; left: 0px;"}
+            .details
+              %h4{:style => "font: 300 12px 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height: 10%;"} Javascript
+              %h5 Coming Soon!
+          %div
+            %img.mosaic-backdrop{:alt => "Original", :height => "140", :src => "http://moonlite.s3.amazonaws.com/objs/71/original.png?1354912232", :style => "display:inline;", :width => "140"}/        
       %div.item
-        %img{src:"http://www.placekitten.com/1000/1000"}
-        %div.carousel-caption
-          %h4 Label
-          %p lkajsdlkfj aslkdjf alksjf laksjfd kla sdjflkas dlfkjahsd ljfka lskdfhalksjdf halkjsdfh laksdf asjkf
+        %div.mosaic-block.bar2
+          %a.mosaic-overlay{:style => "height: 20px; bottom: 0px; display: inline; left: 0px;"}
+            .details
+              %h4{:style => "font: 300 12px 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height: 10%;"} Javascript
+              %h5 Coming Soon!
+          %div
+            %img.mosaic-backdrop{:alt => "Original", :height => "140", :src => "http://moonlite.s3.amazonaws.com/objs/71/original.png?1354912232", :style => "display:inline;", :width => "140"}/        
+        %div.mosaic-block.bar2
+          %a.mosaic-overlay{:style => "height: 20px; bottom: 0px; display: inline; left: 0px;"}
+            .details
+              %h4{:style => "font: 300 12px 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height: 10%;"} Javascript
+              %h5 Coming Soon!
+          %div
+            %img.mosaic-backdrop{:alt => "Original", :height => "140", :src => "http://moonlite.s3.amazonaws.com/objs/74/original.png?1354916814", :style => "display:inline;", :width => "140"}/        
+        %div.mosaic-block.bar2
+          %a.mosaic-overlay{:style => "height: 20px; bottom: 0px; display: inline; left: 0px;"}
+            .details
+              %h4{:style => "font: 300 12px 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height: 10%;"} Javascript
+              %h5 Coming Soon!
+          %div
+            %img.mosaic-backdrop{:alt => "Original", :height => "140", :src => "http://moonlite.s3.amazonaws.com/objs/115/original.png?1359821271", :style => "display:inline;", :width => "140"}/        
+        %div.mosaic-block.bar2
+          %a.mosaic-overlay{:style => "height: 20px; bottom: 0px; display: inline; left: 0px;"}
+            .details
+              %h4{:style => "font: 300 12px 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height: 10%;"} Javascript
+              %h5 Coming Soon!
+          %div
+            %img.mosaic-backdrop{:alt => "Original", :height => "140", :src => "http://moonlite.s3.amazonaws.com/objs/71/original.png?1354912232", :style => "display:inline;", :width => "140"}/        
       %div.item
-        %img{src:"http://www.placekitten.com/1000/1000"}
-        %div.carousel-caption
-          %h4 Label
-          %p lkajsdlkfj aslkdjf alksjf laksjfd kla sdjflkas dlfkjahsd ljfka lskdfhalksjdf halkjsdfh laksdf asjkf
+        %div.mosaic-block.bar2
+          %a.mosaic-overlay{:style => "height: 20px; bottom: 0px; display: inline; left: 0px;"}
+            .details
+              %h4{:style => "font: 300 12px 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height: 10%;"} Javascript
+              %h5 Coming Soon!
+          %div
+            %img.mosaic-backdrop{:alt => "Original", :height => "140", :src => "http://moonlite.s3.amazonaws.com/objs/71/original.png?1354912232", :style => "display:inline;", :width => "140"}/        
+        %div.mosaic-block.bar2
+          %a.mosaic-overlay{:style => "height: 20px; bottom: 0px; display: inline; left: 0px;"}
+            .details
+              %h4{:style => "font: 300 12px 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height: 10%;"} Javascript
+              %h5 Coming Soon!
+          %div
+            %img.mosaic-backdrop{:alt => "Original", :height => "140", :src => "http://moonlite.s3.amazonaws.com/objs/74/original.png?1354916814", :style => "display:inline;", :width => "140"}/        
+        %div.mosaic-block.bar2
+          %a.mosaic-overlay{:style => "height: 20px; bottom: 0px; display: inline; left: 0px;"}
+            .details
+              %h4{:style => "font: 300 12px 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height: 10%;"} Javascript
+              %h5 Coming Soon!
+          %div
+            %img.mosaic-backdrop{:alt => "Original", :height => "140", :src => "http://moonlite.s3.amazonaws.com/objs/115/original.png?1359821271", :style => "display:inline;", :width => "140"}/        
+        %div.mosaic-block.bar2
+          %a.mosaic-overlay{:style => "height: 20px; bottom: 0px; display: inline; left: 0px;"}
+            .details
+              %h4{:style => "font: 300 12px 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height: 10%;"} Javascript
+              %h5 Coming Soon!
+          %div
+            %img.mosaic-backdrop{:alt => "Original", :height => "140", :src => "http://moonlite.s3.amazonaws.com/objs/71/original.png?1354912232", :style => "display:inline;", :width => "140"}/        
     %a.carousel-control.left{href:"#landing_carousel", "data-slide" => "prev"} <
     %a.carousel-control.right{href:"#landing_carousel", "data-slide" => "next"} >
           
@@ -64,5 +162,6 @@
 :javascript
   $(document).ready(function(){
     $('#landing_carousel').carousel({
+      interval: 5000,
     });
   });
